tests/attrib/04-empty.stderr
error: Missing token `dim`.
 --> tests/attrib/04-empty.rs:3:1
  |
3 | #[lazy_nd()]
  | ^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `lazy_nd` (in Nightly builds, run with -Z macro-backtrace for more info)
